[gd_scene load_steps=17 format=3 uid="uid://c0buvd275faii"]

[ext_resource type="Script" uid="uid://dcrvd0ykmsvpy" path="res://mob.gd" id="1_1qmh0"]
[ext_resource type="Texture2D" uid="uid://csfykg2svtkqt" path="res://art/enemyFlyingAlt_1.png" id="1_b3mxk"]
[ext_resource type="Texture2D" uid="uid://ctb765p4oorjc" path="res://art/enemyFlyingAlt_2.png" id="2_1qmh0"]
[ext_resource type="Texture2D" uid="uid://8ieb3frxrhrn" path="res://art/imgs_explode/img_12.png" id="2_yscv0"]
[ext_resource type="Texture2D" uid="uid://d3n5cerh7gmx7" path="res://art/imgs_explode/img_16.png" id="3_eqsov"]
[ext_resource type="Texture2D" uid="uid://nyp343b6sw1h" path="res://art/enemySwimming_1.png" id="3_gfurk"]
[ext_resource type="Texture2D" uid="uid://c075u7eurjiuq" path="res://art/enemySwimming_2.png" id="4_ieysi"]
[ext_resource type="Texture2D" uid="uid://de0n0hsa5uiji" path="res://art/imgs_explode/img_17.png" id="4_wvrms"]
[ext_resource type="Texture2D" uid="uid://cvg2ncny8ypwa" path="res://art/enemyWalking_1.png" id="5_cixyi"]
[ext_resource type="Texture2D" uid="uid://3ym1bqqgtt7e" path="res://art/imgs_explode/img_21.png" id="5_h0ign"]
[ext_resource type="Texture2D" uid="uid://b3l0dks06xt2y" path="res://art/imgs_explode/img_22.png" id="6_6ak38"]
[ext_resource type="Texture2D" uid="uid://c2hoq5k7f2r2u" path="res://art/enemyWalking_2.png" id="6_7ulmv"]
[ext_resource type="Texture2D" uid="uid://bg7b0ljxyo576" path="res://art/imgs_explode/img_25.png" id="7_rxhkm"]
[ext_resource type="Texture2D" uid="uid://ctj55yiu0m4d3" path="res://art/imgs_explode/img_27.png" id="8_srff1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pcqmr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yscv0")
}, {
"duration": 1.0,
"texture": ExtResource("3_eqsov")
}, {
"duration": 1.0,
"texture": ExtResource("4_wvrms")
}, {
"duration": 1.0,
"texture": ExtResource("5_h0ign")
}, {
"duration": 1.0,
"texture": ExtResource("6_6ak38")
}, {
"duration": 1.0,
"texture": ExtResource("7_rxhkm")
}, {
"duration": 1.0,
"texture": ExtResource("8_srff1")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_b3mxk")
}, {
"duration": 1.0,
"texture": ExtResource("2_1qmh0")
}],
"loop": true,
"name": &"fly",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gfurk")
}, {
"duration": 1.0,
"texture": ExtResource("4_ieysi")
}],
"loop": true,
"name": &"swim",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_cixyi")
}, {
"duration": 1.0,
"texture": ExtResource("6_7ulmv")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jbnni"]
radius = 24.0
height = 70.0154

[node name="Mob" type="Area2D" groups=["mobs"]]
script = ExtResource("1_1qmh0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-11, 12)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_pcqmr")
animation = &"explode"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-12, 10)
rotation = 1.5708
skew = 0.020944
shape = SubResource("CapsuleShape2D_jbnni")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-1, 3)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
